[gd_scene load_steps=6 format=3 uid="uid://b2ke2i1fa6m3k"]

[ext_resource type="Script" path="res://scenes/start_menu/start_menu.gd" id="1_dlwu1"]

[sub_resource type="InputEventAction" id="InputEventAction_0iowl"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_fhncf"]
events = [SubResource("InputEventAction_0iowl")]

[sub_resource type="InputEventAction" id="InputEventAction_dgl7s"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_nivqu"]
events = [SubResource("InputEventAction_dgl7s")]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_dlwu1")
metadata/_edit_lock_ = true

[node name="Center" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -52.0
offset_right = 100.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Center"]
layout_mode = 2
theme_override_constants/margin_top = 24
theme_override_constants/margin_bottom = 24
metadata/_edit_group_ = true

[node name="StartButton" type="Button" parent="Center/MarginContainer"]
custom_minimum_size = Vector2(380, 90)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_fhncf")
text = "Start"

[node name="MarginContainer3" type="MarginContainer" parent="Center"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 4
metadata/_edit_group_ = true

[node name="TabContainer" type="HSplitContainer" parent="Center/MarginContainer3"]
layout_mode = 2
dragger_visibility = 1

[node name="EnButton" type="Button" parent="Center/MarginContainer3/TabContainer"]
custom_minimum_size = Vector2(180, 90)
layout_mode = 2
auto_translate = false
focus_mode = 0
theme_override_font_sizes/font_size = 24
disabled = true
text = "English"

[node name="RuButton" type="Button" parent="Center/MarginContainer3/TabContainer"]
custom_minimum_size = Vector2(180, 90)
layout_mode = 2
auto_translate = false
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "Русский"

[node name="MarginContainer2" type="MarginContainer" parent="Center"]
layout_mode = 2
theme_override_constants/margin_top = 24
theme_override_constants/margin_bottom = 24
metadata/_edit_group_ = true

[node name="QuitButton" type="Button" parent="Center/MarginContainer2"]
custom_minimum_size = Vector2(380, 90)
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 32
shortcut = SubResource("Shortcut_nivqu")
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -78.0
offset_bottom = 78.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
metadata/_edit_group_ = true

[node name="ShortcutsLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "Shortcuts:

Enter/Space: Start
Esc: Back/Quit
F5/Ctrl+R: Reset simulation"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Center/MarginContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Center/MarginContainer3/TabContainer/EnButton" to="." method="_on_en_button_pressed"]
[connection signal="pressed" from="Center/MarginContainer3/TabContainer/RuButton" to="." method="_on_ru_button_pressed"]
[connection signal="pressed" from="Center/MarginContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
